--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,14 @@ name = "ratch"
 version = "0.3.0"
 authors = ["Aceeri <conmcclusk@gmail.com>"]
 description = "An alternative to `watch`, with scrolling buffers."
+documentation = "https://docs.rs/crate/ratch"
+homepage = "https://github.com/aceeri/ratch"
+repository = "https://github.com/aceeri/ratch"
 license = "MIT/Apache-2.0"
 edition = "2018"
+readme = "README.md"
+keywords = ["watch", "interval", "scrolling"]
+categories = ["command-line-utilities"]
 
 [dependencies]
 clap = "2.23.0"
